# SearchAgent

./: .gitignore  LICENSE  README.md  Scryfall Search Reference Guide.md  cli.py  cli_backup.py  config.py  events.py  example.py  mtg-search  mtg-search.bat  orchestrator.py  orchestrator_original.py  pyproject.toml  pytest.ini  requirements.txt  todo.md
agents/: evaluation_agent.py  query_agent.py
examples/: cli_demo.py
models/: evaluation.py  search.py
src/mtg_search_agent/: __init__.py  cli.py  config.py  events.py  orchestrator.py  tags.json
src/mtg_search_agent/agents/: evaluation_agent.py  query_agent.py
src/mtg_search_agent/models/: card.py  evaluation.py  search.py
src/mtg_search_agent/prompts/: __init__.py  feedback_synthesis_prompt.txt  query_agent_prompt.txt
src/mtg_search_agent/tools/: scryfall_api.py  tag_search.py
tests/: conftest.py  test_config.py  test_events.py  test_orchestrator.py
tests/agents/: test_evaluation_agent.py  test_query_agent.py
tests/models/: test_card.py  test_evaluation.py  test_search.py
tests/tools/: test_scryfall_api.py  test_tag_search.py
tools/: scryfall_api.py  tag_search.py
